<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compare_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".CompareActivity">
    <LinearLayout
        android:id="@+id/compare_question_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        >
    <TextView
        android:id="@+id/cmpLevelTxt"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center"
        android:text="@string/compLvl"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/caompareText"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_margin="30dp"
        android:alpha="0.7"
        android:background="@drawable/compare_q"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/compareTxt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="30px">

        <Space
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/conpNumOne"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:fontFamily="@font/handkide"
            android:text="@string/compNum1"
            android:textSize="20dp" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/compNumTwo"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:fontFamily="@font/handkide"
            android:text="@string/compNum2"
            android:textSize="20dp" />

        <Space
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>
        <Button
            android:id="@+id/compSubmitBtn"
            android:layout_width="144dp"
            android:layout_height="64dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/handkide"
            android:text="@string/compSubmit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/compare_answer_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
    <ImageView
        android:id="@+id/greatJobImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greatjob"
         />



    <ImageView
        android:id="@+id/wrongAnswerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wrong_answer"
        android:visibility="gone"
         />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/button_border"
        android:text="Next"
        />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/complete_compare_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:layout_weight="1"
            android:id="@+id/cmp_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="test"
            android:textSize="40dp"
            android:gravity="center|bottom"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/cmp_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""/>

        <Button
            android:layout_weight="1"
            android:id="@+id/cmp_finish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/button_border"
            />
    </LinearLayout>

</LinearLayout>